--- a/frontend-mpugliese/Dockerfile
+++ b/frontend-mpugliese/Dockerfile
@@ -1,4 +1,4 @@
-FROM node:14.17.1-alpine AS build-deps
+FROM node:18-alpine AS build-deps
 
 WORKDIR /usr/src/app
 
@@ -13,9 +13,10 @@ RUN npm run build
 # Stage 2 - the production environment
 FROM nginx:1.19.2-alpine
 
-COPY --from=build-deps /usr/src/app/build /usr/share/nginx/html
+COPY --from=build-deps /usr/src/app/.next /usr/share/nginx/html
 COPY nginx.conf /etc/nginx/nginx.conf
 
 EXPOSE 80
 
 CMD ["nginx", "-g", "daemon off;"]
+
